Fix links and accordion spacing also on mobile

--- a/app/assets/sass/explore.scss
+++ b/app/assets/sass/explore.scss
@@ -600,6 +600,18 @@ li.govuk-tabs__list-item {
 
 }
 
+.explore-page {
+  a {
+    text-decoration: none;
+  }
+  .govuk-accordion li {
+    padding-bottom: 30px;
+    margin-bottom: 0;
+  }
+}
+
+
+
 
 // Desktop
 
@@ -617,13 +629,19 @@ li.govuk-tabs__list-item {
 @include govuk-media-query ($from: desktop) {
 
   .explore-page {
-    a {
-      text-decoration: none;
+    .home-top__links {
+      &:after {
+        bottom: 0;
+      }
+      &-title {
+        margin-top: 0;
+        font-weight: normal;
+      }
+      &-list a {
+        font-weight: bold;
+      }
     }
-    .govuk-accordion li {
-      padding-bottom: 30px;
-      margin-bottom: 0;
-    }
+
   }
 
   .govuk-breadcrumbs {
@@ -652,15 +670,6 @@ li.govuk-tabs__list-item {
     margin-right: auto;
   }
 
-  .home-top__links {
-    position: unset;
-    margin-top: 10px;
-    &-item {
-      a:visited, a:link {
-        font-weight: 700;
-      }
-    }
-  }
 
   .xpl-hero {
     width: 100vw;
